--- a/configs/Mamba_ablation/cocosuperpixels-EX.yaml
+++ b/configs/Mamba_ablation/cocosuperpixels-EX.yaml
@@ -1,24 +1,24 @@
 out_dir: results
-metric_best: mae
-metric_agg: argmin
+metric_best: f1
 wandb:
   use: True
   project: LRGB-Benchmark-RandomSeed
   entity: vjd5zr
 dataset:
-  format: OGB
-  name: peptides-structural
-  task: graph
-  task_type: regression
+  format: PyG-COCOSuperpixels
+  name: edge_wt_region_boundary
+  slic_compactness: 30
+  task: graph  # Even if VOC is node-level task, this needs to be set as 'graph'
+  task_type: classification
   transductive: False
   node_encoder: True
-  node_encoder_name: Atom+LapPE
+  node_encoder_name: LinearNode
   node_encoder_bn: False
   edge_encoder: True
-  edge_encoder_name: Bond
+  edge_encoder_name: VOCEdge
   edge_encoder_bn: False
 posenc_LapPE:
-  enable: True
+  enable: False
   eigen:
     laplacian_norm: none
     eigvec_norm: L2
@@ -29,36 +29,46 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 128
+  batch_size: 64
   eval_period: 1
   ckpt_period: 100
 model:
   type: GPSModel
-  loss_fun: l1
-  graph_pooling: mean
+  loss_fun: weighted_cross_entropy
+  num_experts: 4
 gt:
   layer_type: CustomGatedGCN+Mamba_Hybrid_Degree_Noise
   layers: 4
-  n_heads: 4
+  n_heads: 8
   dim_hidden: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   dropout: 0.0
   attn_dropout: 0.5
   layer_norm: False
   batch_norm: True
 gnn:
-  head: default
+  head: inductive_node
   layers_pre_mp: 0
-  layers_post_mp: 1  # Not used when `gnn.head: san_graph`
+  layers_post_mp: 3
   dim_inner: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   batchnorm: True
   act: relu
   dropout: 0.0
+  agg: mean
+  normalize_adj: False
+# optim:
+#   clip_grad_norm: True
+#   optimizer: adamW
+#   weight_decay: 0.0
+#   base_lr: 0.0005
+#   max_epoch: 300
+#   scheduler: cosine_with_warmup
+#   num_warmup_epochs: 10
 optim:
-  clip_grad_norm: True
-  optimizer: adamW
-  weight_decay: 0.01
-  base_lr: 0.001
-  max_epoch: 200
-  scheduler: cosine_with_warmup
-  num_warmup_epochs: 10
+    clip_grad_norm: True
+    optimizer: adamW
+    weight_decay: 0.001
+    base_lr: 0.0015
+    max_epoch: 300
+    scheduler: cosine_with_warmup
+    num_warmup_epochs: 10
 seed: 0
