--- a/configs/Mamba_ablation/pattern-EX.yaml
+++ b/configs/Mamba_ablation/pattern-EX.yaml
@@ -6,7 +6,7 @@ wandb:
   entity: vjd5zr
 dataset:
   format: PyG-GNNBenchmarkDataset
-  name: CLUSTER
+  name: PATTERN
   task: graph
   task_type: classification
   transductive: False
@@ -22,7 +22,7 @@ posenc_LapPE:
   eigen:
     laplacian_norm: none
     eigvec_norm: L2
-    max_freqs: 10
+    max_freqs: 16
   model: DeepSet
   dim_pe: 16
   layers: 2
@@ -30,7 +30,7 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 128
+  batch_size: 128 # 32
   eval_period: 1
   ckpt_period: 100
 model:
@@ -38,12 +38,12 @@ model:
   loss_fun: weighted_cross_entropy
   edge_decoding: dot
   num_experts: 4
-gt:  # Hyperparameters optimized for ~500k budget.
-  layer_type: CustomGatedGCN+Mamba_RandomWalk_NodeMulti
-  layers: 16
-  n_heads: 8
-  dim_hidden: 48  # `gt.dim_hidden` must match `gnn.dim_inner`
-  dropout: 0.1
+gt:  # Hyperparameters optimized for up to ~500k budget.
+  layer_type: CustomGatedGCN+Mamba_Noise_SameIn_WeightedSum_Multi
+  layers: 6
+  n_heads: 4
+  dim_hidden: 64  # `gt.dim_hidden` must match `gnn.dim_inner`
+  dropout: 0.0
   attn_dropout: 0.5
   layer_norm: False
   batch_norm: True
@@ -51,7 +51,7 @@ gnn:
   head: inductive_node
   layers_pre_mp: 0
   layers_post_mp: 3
-  dim_inner: 48  # `gt.dim_hidden` must match `gnn.dim_inner`
+  dim_inner: 64  # `gt.dim_hidden` must match `gnn.dim_inner`
   batchnorm: True
   act: relu
   dropout: 0.0
