--- a/configs/Mamba_ablation/vocsuperpixels-EX.yaml
+++ b/configs/Mamba_ablation/vocsuperpixels-EX.yaml
@@ -1,21 +1,20 @@
 out_dir: results
-metric_best: accuracy-SBM
+metric_best: f1
 wandb:
-  use: True
-  project: GNN-Benchmark-RandomSeed
+  project: LRGB-Benchmark-RandomSeed
   entity: vjd5zr
 dataset:
-  format: PyG-GNNBenchmarkDataset
-  name: CLUSTER
-  task: graph
+  format: PyG-VOCSuperpixels
+  name: edge_wt_region_boundary
+  slic_compactness: 30
+  task: graph  # Even if VOC is node-level task, this needs to be set as 'graph'
   task_type: classification
   transductive: False
-  split_mode: standard
   node_encoder: True
-  node_encoder_name: LapPE
+  node_encoder_name: VOCNode+LapPE
   node_encoder_bn: False
   edge_encoder: True
-  edge_encoder_name: DummyEdge
+  edge_encoder_name: VOCEdge
   edge_encoder_bn: False
 posenc_LapPE:
   enable: True
@@ -26,24 +25,22 @@ posenc_LapPE:
   model: DeepSet
   dim_pe: 16
   layers: 2
-  n_heads: 4  # Only used when `posenc.model: Transformer`
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 128
+  batch_size: 32
   eval_period: 1
   ckpt_period: 100
 model:
   type: GPSModel
   loss_fun: weighted_cross_entropy
-  edge_decoding: dot
   num_experts: 4
-gt:  # Hyperparameters optimized for ~500k budget.
-  layer_type: CustomGatedGCN+Mamba_RandomWalk_NodeMulti
-  layers: 16
+gt:
+  layer_type: CustomGatedGCN+Mamba_Noise_SameIn_WeightedSum_Multi
+  layers: 4
   n_heads: 8
-  dim_hidden: 48  # `gt.dim_hidden` must match `gnn.dim_inner`
-  dropout: 0.1
+  dim_hidden: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
+  dropout: 0.0
   attn_dropout: 0.5
   layer_norm: False
   batch_norm: True
@@ -51,7 +48,7 @@ gnn:
   head: inductive_node
   layers_pre_mp: 0
   layers_post_mp: 3
-  dim_inner: 48  # `gt.dim_hidden` must match `gnn.dim_inner`
+  dim_inner: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   batchnorm: True
   act: relu
   dropout: 0.0
@@ -60,9 +57,9 @@ gnn:
 optim:
   clip_grad_norm: True
   optimizer: adamW
-  weight_decay: 0.0001
-  base_lr: 0.001
-  max_epoch: 100
+  weight_decay: 0.001
+  base_lr: 0.0015
+  max_epoch: 300
   scheduler: cosine_with_warmup
-  num_warmup_epochs: 5
+  num_warmup_epochs: 10
 seed: 0
