--- a/configs/Mamba/Learn_rank/brain_mamba.yaml
+++ b/configs/Mamba/Learn_rank/brain_mamba.yaml
@@ -1,22 +1,29 @@
 out_dir: results/degre_mult
-metric_best: ap
+metric_best: accuracy
 wandb:
   use: True
-  project: Mamba
+  project: LRGB-Benchmark-RandomSeed
   entity: vjd5zr
 dataset:
-  format: OGB
-  name: peptides-functional
+  format: Brain
+  name: brain
   task: graph
-  task_type: classification_multilabel
+  task_type: classification
   transductive: False
   node_encoder: True
   node_encoder_name: LinearNode
   node_encoder_bn: False
   edge_encoder: True
-  edge_encoder_name: Bond
+  edge_encoder_name: DummyEdge
   edge_encoder_bn: False
-  split_mode: standard
+  split_mode: random
+  split: [0.5, 0.2, 0.3]
+prep:
+  centrality: False
+  centrality_types: katz
+  centrality_buckets: 100
+  neighbors: False
+  neighbor_hops: 6
 posenc_LapPE:
   enable: False
   eigen:
@@ -31,7 +38,10 @@ train:
   mode: custom
   batch_size: 128
   eval_period: 1
-  ckpt_period: 100
+  ckpt_period: 60
+  enable_ckpt: False
+  auto_resume: True
+  epoch_resume: 59
 model:
   type: GPSModel
   loss_fun: cross_entropy
@@ -40,15 +50,17 @@ model:
   learn_rank: False
   learn_rank_start_epoch: 0 
   graph_index: True
-  rtr_type: mamba
-  rtr_epoch: 100
+  # rtr_type: mamba
+  # rtr_epoch: 100
   captum: False
+  gnn_explainer: False
+  mamba_interpret: True
 gt:
   layer_type: CustomGatedGCN+Mamba_Hybrid_Degree_Noise
   n_heads: 4
   dim_hidden: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   dropout: 0.0
-  attn_dropout: 0.5
+  attn_dropout: 0.0
   layer_norm: False
   batch_norm: True
 gnn:
@@ -62,8 +74,8 @@ gnn:
 optim:
   clip_grad_norm: True
   optimizer: adamW
-  weight_decay: 0.01
-  base_lr: 0.001
+  weight_decay: 1e-3
+  base_lr: 0.01
   max_epoch: 200
   scheduler: cosine_with_warmup
   num_warmup_epochs: 10
