add the rank learner and router part; build more configs

--- a/configs/GPS/fi-GPS.yaml
+++ b/configs/GPS/fi-GPS.yaml
@@ -1,22 +1,30 @@
 out_dir: results/degre_mult
-metric_best: ap
+metric_best: mae
+metric_agg: argmin
 wandb:
   use: True
   project: LRGB-Benchmark-RandomSeed
   entity: vjd5zr
 dataset:
-  format: OGB
-  name: peptides-functional
+  format: HCP
+  name: HCPFI
   task: graph
-  task_type: classification_multilabel
+  task_type: regression
   transductive: False
   node_encoder: True
   node_encoder_name: LinearNode
   node_encoder_bn: False
   edge_encoder: True
-  edge_encoder_name: Bond
+  edge_encoder_name: DummyEdge
   edge_encoder_bn: False
-  split_mode: standard
+  split_mode: random
+  split: [0.5, 0.2, 0.3]
+prep:
+  centrality: False
+  centrality_types: katz
+  centrality_buckets: 100
+  neighbors: False
+  neighbor_hops: 6
 posenc_LapPE:
   enable: False
   eigen:
@@ -29,25 +37,17 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 128
+  batch_size: 64
   eval_period: 1
   ckpt_period: 100
-  contrastive_pretrain: False
-  contrastive_finetune: False
-  contrastive_pretrain_epochs: 80
 model:
   type: GPSModel
   loss_fun: cross_entropy
   graph_pooling: mean
   num_experts: 6
   learn_rank: False
-  learn_rank_start_epoch: 0 
-  graph_index: True
-  rtr_type: mamba
-  rtr_epoch: 100
-  captum: False
 gt:
-  layer_type: CustomGatedGCN+Mamba_MoE
+  layer_type: CustomGatedGCN+Transformer
   n_heads: 4
   dim_hidden: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   dropout: 0.0
@@ -57,7 +57,7 @@ gt:
 gnn:
   head: default
   layers_pre_mp: 0
-  layers_post_mp: 1  # Not used when `gnn.head: san_graph`
+  layers_post_mp: 2  # Not used when `gnn.head: san_graph`
   dim_inner: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   batchnorm: True
   act: relu
@@ -65,7 +65,7 @@ gnn:
 optim:
   clip_grad_norm: True
   optimizer: adamW
-  weight_decay: 0.001
+  weight_decay: 0.01
   base_lr: 0.01
   max_epoch: 200
   scheduler: cosine_with_warmup
