--- a/configs/Mamba/Learn_rank/brain_mamba.yaml
+++ b/configs/Mamba/Learn_rank/brain_mamba.yaml
@@ -36,7 +36,7 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 128
+  batch_size: 32
   eval_period: 1
   ckpt_period: 60
   enable_ckpt: False
@@ -46,17 +46,17 @@ model:
   type: GPSModel
   loss_fun: cross_entropy
   graph_pooling: mean
-  num_experts: 4
-  learn_rank: False
-  learn_rank_start_epoch: 0 
+  num_experts: 3
+  learn_rank: True
+  learn_rank_start_epoch: 0
   graph_index: True
-  # rtr_type: mamba
-  # rtr_epoch: 100
   captum: False
   gnn_explainer: False
   mamba_interpret: False
+  same_order_all_layers: True
+  moe_pos_enc: True
 gt:
-  layer_type: CustomGatedGCN+Mamba_Multihead_Repeat_MoE
+  layer_type: CustomGatedGCN+Mamba_MoE
   n_heads: 4
   dim_hidden: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   dropout: 0.0
