--- a/configs/GatedGCN/age-GatedGCN.yaml
+++ b/configs/GatedGCN/age-GatedGCN.yaml
@@ -5,8 +5,8 @@ wandb:
   project: LRGB-Benchmark-RandomSeed
   entity: vjd5zr
 dataset:
-  format: Brain
-  name: brain
+  format: HCP
+  name: HCPAge
   task: graph
   task_type: classification
   transductive: False
@@ -20,7 +20,7 @@ dataset:
   split: [0.5, 0.2, 0.3]
 train:
   mode: custom
-  batch_size: 32 
+  batch_size: 32
   eval_period: 1
   ckpt_period: 60
   ckpt_period: 60
@@ -49,7 +49,7 @@ optim:
   optimizer: adam
   weight_decay: 0.0
   base_lr: 0.001
-  max_epoch: 500
+  max_epoch: 200
   scheduler: reduce_on_plateau
   reduce_factor: 0.5
   schedule_patience: 10
