--- a/configs/GatedGCN/brain-Sage.yaml
+++ b/configs/GatedGCN/brain-Sage.yaml
@@ -20,7 +20,7 @@ dataset:
   split: [0.5, 0.2, 0.3]
 train:
   mode: custom
-  batch_size: 32 
+  batch_size: 128 
   eval_period: 1
   ckpt_period: 60
   ckpt_period: 60
@@ -39,7 +39,7 @@ gnn:
   layers_mp: 8
   layers_post_mp: 3
   dim_inner: 108
-  layer_type: gatedgcnconv
+  layer_type: sage
   act: relu
   residual: True
   dropout: 0.0
@@ -47,8 +47,8 @@ gnn:
   normalize_adj: False
 optim:
   optimizer: adam
-  weight_decay: 0.0
-  base_lr: 0.001
+  weight_decay: 1e-5
+  base_lr: 1e-4
   max_epoch: 500
   scheduler: reduce_on_plateau
   reduce_factor: 0.5
