--- a/configs/Mamba/HCP/age-mamba.yaml
+++ b/configs/Mamba/HCP/age-mamba.yaml
@@ -1,22 +1,29 @@
 out_dir: results/degre_mult
-metric_best: ap
+metric_best: accuracy
 wandb:
   use: True
   project: LRGB-Benchmark-RandomSeed
   entity: vjd5zr
 dataset:
-  format: OGB
-  name: peptides-functional
+  format: HCP
+  name: HCPAge
   task: graph
-  task_type: classification_multilabel
+  task_type: classification
   transductive: False
   node_encoder: True
   node_encoder_name: LinearNode
   node_encoder_bn: False
   edge_encoder: True
-  edge_encoder_name: Bond
+  edge_encoder_name: DummyEdge
   edge_encoder_bn: False
-  split_mode: standard
+  split_mode: random
+  split: [0.5, 0.2, 0.3]
+prep:
+  centrality: False
+  centrality_types: katz
+  centrality_buckets: 100
+  neighbors: False
+  neighbor_hops: 6
 posenc_LapPE:
   enable: False
   eigen:
@@ -29,29 +36,31 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 128
+  batch_size: 32
   eval_period: 1
-  ckpt_period: 100
-  contrastive_pretrain: False
-  contrastive_finetune: False
-  contrastive_pretrain_epochs: 80
+  ckpt_period: 60
+  enable_ckpt: False
+  auto_resume: False
+  epoch_resume: 59
 model:
   type: GPSModel
   loss_fun: cross_entropy
   graph_pooling: mean
-  num_experts: 6
-  learn_rank: False
-  learn_rank_start_epoch: 0 
+  num_experts: 3
+  learn_rank: True
+  learn_rank_start_epoch: 0
   graph_index: True
-  rtr_type: mamba
-  rtr_epoch: 100
   captum: False
+  gnn_explainer: False
+  mamba_interpret: False
+  same_order_all_layers: True
+  moe_pos_enc: True
 gt:
   layer_type: CustomGatedGCN+Mamba_MoE
   n_heads: 4
   dim_hidden: 96  # `gt.dim_hidden` must match `gnn.dim_inner`
   dropout: 0.0
-  attn_dropout: 0.5
+  attn_dropout: 0.0
   layer_norm: False
   batch_norm: True
 gnn:
@@ -65,8 +74,8 @@ gnn:
 optim:
   clip_grad_norm: True
   optimizer: adamW
-  weight_decay: 0.001
-  base_lr: 0.01
+  weight_decay: 0.01
+  base_lr: 0.001
   max_epoch: 200
   scheduler: cosine_with_warmup
   num_warmup_epochs: 10
