--- a/configs/Mamba/HCP/wm-mamba.yaml
+++ b/configs/Mamba/HCP/wm-mamba.yaml
@@ -19,6 +19,7 @@ dataset:
   edge_encoder_bn: False
   split_mode: random
   split: [0.7, 0.1, 0.2]
+  dir: /project/uvadm/zhenyu/datasets
 prep:
   centrality: False
   centrality_types: katz
@@ -37,7 +38,7 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 32
+  batch_size: 64
   eval_period: 1
   ckpt_period: 60
   enable_ckpt: False
@@ -45,7 +46,7 @@ train:
   epoch_resume: 59
 model:
   type: GPSModel
-  loss_fun: cross_entropy
+  loss_fun: mse
   graph_pooling: mean
   num_experts: 3
   learn_rank: True
@@ -76,7 +77,7 @@ optim:
   clip_grad_norm: True
   optimizer: adamW
   weight_decay: 1e-5
-  base_lr: 0.1
+  base_lr: 0.05
   max_epoch: 200
   scheduler: cosine_with_warmup
   num_warmup_epochs: 10
