--- a/configs/Mamba/HCP/age-mamba.yaml
+++ b/configs/Mamba/HCP/age-mamba.yaml
@@ -18,7 +18,7 @@ dataset:
   edge_encoder_bn: False
   split_mode: random
   split: [0.5, 0.2, 0.3]
-  dir: /project/uvadm/zhenyu/datasets
+  # dir: /project/uvadm/zhenyu/datasets
 prep:
   centrality: False
   centrality_types: katz
@@ -37,7 +37,7 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 32
+  batch_size: 16
   eval_period: 1
   ckpt_period: 60
   enable_ckpt: False
@@ -75,8 +75,8 @@ gnn:
 optim:
   clip_grad_norm: True
   optimizer: adamW
-  weight_decay: 0.01
-  base_lr: 0.001
+  weight_decay: 1e-5
+  base_lr: 0.01
   max_epoch: 200
   scheduler: cosine_with_warmup
   num_warmup_epochs: 10
