--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ scripts/pcqm4m/**/*.gz
 scripts/pcqm4m/**/*.tsv
 scripts/pcqm4m/pcqm4m-v2/
 slurm_history/
-datasets/
-!/datasets/brain/
+datasets/*
+!datasets/brain/processed/*
 pretrained/
 results/
 vocprep/benchmark_RELEASE/
