--- a/configs/Mamba/HCP/age-mamba.yaml
+++ b/configs/Mamba/HCP/age-mamba.yaml
@@ -47,14 +47,14 @@ model:
   type: GPSModel
   loss_fun: cross_entropy
   graph_pooling: mean
-  num_experts: 3
-  learn_rank: True
+  num_experts: 1
+  learn_rank: False
   learn_rank_start_epoch: 0
   graph_index: True
   captum: False
   gnn_explainer: False
   mamba_interpret: False
-  same_order_all_layers: True
+  same_order_all_layers: False
   moe_pos_enc: True
 gt:
   layer_type: CustomGatedGCN+Mamba_MoE
@@ -76,7 +76,7 @@ optim:
   clip_grad_norm: True
   optimizer: adamW
   weight_decay: 1e-5
-  base_lr: 0.01
+  base_lr: 0.05
   max_epoch: 200
   scheduler: cosine_with_warmup
   num_warmup_epochs: 10
