--- a/configs/Mamba/HCP/brain-mamba.yaml
+++ b/configs/Mamba/HCP/brain-mamba.yaml
@@ -47,14 +47,14 @@ model:
   type: GPSModel
   loss_fun: cross_entropy
   graph_pooling: mean
-  num_experts: 3
-  learn_rank: True
+  num_experts: 1
+  learn_rank: False
   learn_rank_start_epoch: 0
   graph_index: True
   captum: False
   gnn_explainer: False
   mamba_interpret: False
-  same_order_all_layers: True
+  same_order_all_layers: False
   moe_pos_enc: True
 gt:
   layer_type: CustomGatedGCN+Mamba_MoE
