--- a/configs/Mamba/HCP/fi-mamba.yaml
+++ b/configs/Mamba/HCP/fi-mamba.yaml
@@ -38,7 +38,7 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 32
+  batch_size: 16
   eval_period: 1
   ckpt_period: 60
   enable_ckpt: False
@@ -48,14 +48,14 @@ model:
   type: GPSModel
   loss_fun: cross_entropy
   graph_pooling: mean
-  num_experts: 3
-  learn_rank: True
+  num_experts: 1
+  learn_rank: False
   learn_rank_start_epoch: 0
   graph_index: True
   captum: False
   gnn_explainer: False
   mamba_interpret: False
-  same_order_all_layers: True
+  same_order_all_layers: False
   moe_pos_enc: True
 gt:
   layer_type: CustomGatedGCN+Mamba_MoE
