--- a/configs/BMoE/age-mamba.yaml
+++ b/configs/BMoE/age-mamba.yaml
@@ -1,18 +1,17 @@
 out_dir: results/degre_mult
-metric_best: mae
-metric_agg: argmin
+metric_best: accuracy
 wandb:
   use: True
   project: LRGB-Benchmark-RandomSeed
   entity: vjd5zr
 dataset:
   format: HCP
-  name: HCPFI
+  name: HCPAge
   task: graph
-  task_type: regression
+  task_type: classification
   transductive: False
   node_encoder: True
-  node_encoder_name: LinearNode
+  node_encoder_name: LapPE
   node_encoder_bn: False
   edge_encoder: True
   edge_encoder_name: DummyEdge
@@ -27,7 +26,7 @@ prep:
   neighbors: False
   neighbor_hops: 6
 posenc_LapPE:
-  enable: False
+  enable: True
   eigen:
     laplacian_norm: none
     eigvec_norm: L2
@@ -43,21 +42,20 @@ train:
   ckpt_period: 60
   enable_ckpt: False
   auto_resume: False
-  # epoch_resume: False
+  epoch_resume: 59
 model:
   type: GPSModel
   loss_fun: cross_entropy
   graph_pooling: mean
-  num_experts: 1
-  learn_rank: False
+  num_experts: 3
+  learn_rank: True
   learn_rank_start_epoch: 0
   graph_index: True
   captum: False
   gnn_explainer: False
   mamba_interpret: False
-  same_order_all_layers: False
+  same_order_all_layers: True
   moe_pos_enc: True
-  load_balancing_loss: False
 gt:
   layer_type: CustomGatedGCN+Mamba_MoE
   n_heads: 4
@@ -78,7 +76,7 @@ optim:
   clip_grad_norm: True
   optimizer: adamW
   weight_decay: 1e-5
-  base_lr: 0.05
+  base_lr: 1e-2
   max_epoch: 200
   scheduler: cosine_with_warmup
   num_warmup_epochs: 10
