--- a/configs/BMoE/brain-mamba.yaml
+++ b/configs/BMoE/brain-mamba.yaml
@@ -1,18 +1,17 @@
 out_dir: results/degre_mult
-metric_best: mae
-metric_agg: argmin
+metric_best: accuracy
 wandb:
   use: True
   project: LRGB-Benchmark-RandomSeed
   entity: vjd5zr
 dataset:
-  format: HCP
-  name: HCPFI
+  format: Brain
+  name: brain
   task: graph
-  task_type: regression
+  task_type: classification
   transductive: False
   node_encoder: True
-  node_encoder_name: LinearNode
+  node_encoder_name: LapPE
   node_encoder_bn: False
   edge_encoder: True
   edge_encoder_name: DummyEdge
@@ -27,7 +26,7 @@ prep:
   neighbors: False
   neighbor_hops: 6
 posenc_LapPE:
-  enable: False
+  enable: True
   eigen:
     laplacian_norm: none
     eigvec_norm: L2
@@ -38,26 +37,25 @@ posenc_LapPE:
   raw_norm_type: none
 train:
   mode: custom
-  batch_size: 16
+  batch_size: 32
   eval_period: 1
   ckpt_period: 60
   enable_ckpt: False
   auto_resume: False
-  # epoch_resume: False
+  epoch_resume: 59
 model:
   type: GPSModel
   loss_fun: cross_entropy
   graph_pooling: mean
-  num_experts: 1
-  learn_rank: False
+  num_experts: 3
+  learn_rank: True
   learn_rank_start_epoch: 0
   graph_index: True
   captum: False
   gnn_explainer: False
   mamba_interpret: False
-  same_order_all_layers: False
+  same_order_all_layers: True
   moe_pos_enc: True
-  load_balancing_loss: False
 gt:
   layer_type: CustomGatedGCN+Mamba_MoE
   n_heads: 4
@@ -77,8 +75,8 @@ gnn:
 optim:
   clip_grad_norm: True
   optimizer: adamW
-  weight_decay: 1e-5
-  base_lr: 0.05
+  weight_decay: 1e-3
+  base_lr: 0.01
   max_epoch: 200
   scheduler: cosine_with_warmup
   num_warmup_epochs: 10
